# mlta-gram0

./: CMakeLists.txt  README.md
examples/: count_to.g0  invert.g0  is_even_palindrome.g0  iterate_N.g0  str_invert.g0  str_reverse.g0  while_true.g0
include/: cli.hpp  debug_helpers.hpp  interpreter.hpp  launcher.hpp  parser.hpp  rule.hpp
src/: .clangd  CMakeLists.txt  cli.cpp  interpreter.cpp  launcher.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
